[package]
name = "deonym"
description = "Nym receiver anonymity through a third party"
version = "0.1.0"
homepage = "https://deonym.org"
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.16.0"
rsa = "0.5.0"
rand = "0.8.5"
sha2 = "0.10.2"